<resources>
    <string name="app_name">AbiturHelper</string>

    <string name="pickUpSpecialtiesTitle">Подобрать специальности</string>
    <string name="calculateGraduationChancesTitle">Оценить шанс поступления</string>

    <string name="showList">Показать список</string>

    <string name="score_error_message_last_name_is_null">Фамилия не может быть пустой</string>
    <string name="score_error_message_first_name_is_null">Имя не может быть пустым</string>
    <string name="score_patronymic_is_null">—</string>

    <string name="errorMessageMaths">Балл по математике меньше проходного (27)</string>
    <string name="errorMessageRussian">Балл по русскому языку меньше проходного (36)</string>
    <string name="errorMessagePhysics">Балл по физике меньше проходного (36)</string>
    <string name="errorMessageComputerScience">Балл по информатике меньше проходного (40)</string>
    <string name="errorMessageSocialScience">Балл по обществознанию меньше проходного (42)</string>

    <string name="score_error_message_less_than_three_score">Введено меньше трёх баллов</string>

    //FullName
    <string name="scoreFullName">ФИО</string>
    <string name="scoreLastName">Фамилия</string>
    <string name="scoreFirstName">Имя</string>
    <string name="scorePatronymic">Отчество</string>
    //Score
    <string name="scoreMaths">Математика</string>
    <string name="scoreRussian">Русский язык</string>
    <string name="scorePhysics">Физика</string>
    <string name="scoreComputerScience">Информатика</string>
    <string name="scoreSocialScience">Обществознание</string>

    // ScoreSetupScore
    <string name="setupScoreTitle">Введите свои данные</string>
    <string name="setupScoreScoreTitle">Баллы ЕГЭ</string>
    <string name="setupScoreAdditionalTitle">Дополнительные баллы</string>
    <string name="setupScoreToWorkWithSpecialties">Сохранить данные</string>

    <string name="setupScoreLessThanPassingMaths">Балл по математике меньше проходного</string>
    <string name="setupScoreLessThanPassingRussian">Балл по русскому языку меньше проходного</string>
    <string name="setupScoreLessThanPassingPhysics">Балл по физике меньше проходного</string>
    <string name="setupScoreLessThanPassingComputerScience">Балл по информатике меньше проходного</string>
    <string name="setupScoreLessThanPassingSocialScience">Балл по обществознанию меньше проходного</string>

    <string name="setupScoreFieldIsEmpty">Поле не может быть пустым</string>
    <string name="setupScoreLessThanThreeScores">Баллов не может быть меньше трёх</string>

    <string name="workWithSpecialtiesTitle">Работа со специальностями</string>
    <string name="workWithSpecialtiesToCurrentList">К актуальному списку</string>
    <string name="workWithSpecialtiesToResultScreen">К подбору специальностей</string>
    <string name="workWithSpecialtiesToResultScreenButton">Показать подобранные специальности</string>
    <string name="workWithSpecialtiesScoreSavedMessage">Данные корректны и были успешно сохранены</string>
    <string name="workWithSpecialtiesListsArePrepared">Списки успешно считаны и обработаны</string>

    // ScoreResult
    <string name="resultTitle">Подобранные специальности</string>
    <string name="resultSpecialtiesWithoutScoreTitle">Специальности без балла</string>
    <string name="resultSpecialtiesWithoutScoreShowSpecialties">Показать специальности без балла</string>
    <string name="resultFittingSpecialtiesTitle">Специальности под баллы</string>
    <string name="resultFittingSpecialtiesShowSpecialties">Показать специальности под баллы</string>

    <string name="resultShowSpecialties">Показать специальности</string>
    <string name="resultSaveAndMoveToProfile">Сохранить и перейти к профилю</string>

    <string name="profileTitle">Профиль</string>
    <string name="profileAdditionalScoreSum">Сумма баллов</string>
    <string name="profileFinalListOfSpecialtiesTitle">Подобрать специальности</string>

    <string name="profileFinalListOfSpecialtiesAmount">Подобрано специальностей</string>


    <string name="amountOfChosenSpecialties">Выбрано специальностей</string>

    <string name="profileChanceTitle">Оценить шанс поступления</string>

    <string name="profileApplyTitle">Подать заявления</string>
    <string name="profileGraduationShowCurrentList">Показать актуальный список</string>

    <string name="profileApplySelectSpecialtiesForGraduation">Выбрать специальности для поступления</string>
    <string name="profileApplySelectSpecialtiesForGraduationTitle">Выберите специальности</string>

    <string name="profileGraduationSelectSpecialtiesMessage">Специальности были успешно сохранены</string>

    <string name="profileGraduationConfirmChoiceTitle">Подтвердить выбор</string>
    <string name="profileGraduationConfirmChoiceText">Вы выбрали следующие специальности:</string>

    <string name="selectSaveCheckedSpecialties">Сохранить выбор</string>

    <string name="profileGraduationShowCurrentListTitle">Поданные заявления</string>
    <string name="returnToProfile">Вернуться к профилю</string>

    <string name="resultShowFittingSpecialties">Подобранные специальности</string>

    <string name="profileUpdateScores">Сохранить изменения</string>
    <string name="profileUpdateScoresMessage">Баллы успешно обновлены</string>

    <string name="profileEditFieldDefaultValue">0</string>

    <string name="additionalScoreHint">Укажите сумму своих дополнительных баллов:</string>

    <string name="currentListTitle">Актуальный список</string>

    <string name="textResult">Результат</string>
    <string name="textSum">Сумма баллов</string>

    <string name="selectSpecialtiesForCalculatingTitle">Выберите специальности для рассчёта</string>

    <string name="showResult">Сохранить результат</string>

    <string name="facultyEntriesTotalText">Всего мест</string>
    <string name="facultyEntriesFreeText">Свободно мест</string>
    <string name="facultyAmountOfStatementsText">Подано заявлений</string>
    <string name="facultyMinimalScore">Минимальный балл</string>

    <string name="facultyMathsAndPhysics">Математика + Физика</string>
    <string name="facultyMathsAndSocialScience">Математика + Обществознание</string>
    <string name="facultyMathsAndComputerScience">Математика + Информатика</string>

    <string name="bachelorFullName">%s %s %s</string>
    <string name="bachelorSpecialtyFirst">Первая специальность</string>
    <string name="bachelorSpecialtySecond">Вторая специальность</string>
    <string name="bachelorSpecialtyThird">Третья специальность</string>
    <string name="bachelorAdditionalScore">Сумма дополнительных баллов</string>

    <string name="facultyUNTI">УНТИ</string>
    <string name="facultyFEU">ФЭУ</string>
    <string name="facultyFIT">ФИТ</string>
    <string name="facultyMTF">МТФ</string>
    <string name="facultyUNIT">УНИТ</string>
    <string name="facultyFEE">"ФЭЭ"</string>

    <string name="selectedSpecialtyName">Название специальности</string>
    <string name="selectedFacultyName">Название факультета</string>
    <string name="selectedAmountOfStudents">Подавших документы</string>
    <string name="selectedPosition">Ваша позиция в списке</string>

    <string name="selectedOldMinimalScore">Старый минимальный балл</string>
    <string name="selectedNewMinimalScore">Новый минимальный балл</string>

    <string name="chanceChooseSpecialtiesTitle">Выберите специальности</string>
    <string name="chanceConfirmChoiceTitle">Подтвердите выбор</string>
    <string name="chanceSupposedPosition">Предполагаемая позиция</string>
    <string name="chanceChanceOfGraduation">Шанс поступления</string>
    <string name="chanceMinimalScore">Минимальный балл</string>
    <string name="chanceShowResultsTitle">Шансы поступления</string>

    <string name="totalOfEntries">Количество мест</string>

    // Общие
    <string name="amountOfSpecialties">Количество специальностей</string>

    <string name="specialtiesNotChosen">Вы не выбрали ни одной специальности</string>
</resources>
