<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.pick_up_specialties.WorkWithSpecialtiesView">
    <LinearLayout
        android:id="@+id/workLinearLayout"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/workToCurrentListLL"
            style="@style/mainLinearLayout"
            android:layout_weight="1">
            <TextView
                android:text="@string/workWithSpecialtiesToCurrentList"
                style="@style/textTitle" />
            <View
                style="@style/Divider" />
            <Button
                android:id="@+id/workToCurrentList"
                android:text="@string/showList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/workToResultLL"
            style="@style/mainLinearLayout"
            android:layout_weight="1">
            <TextView
                android:text="@string/workWithSpecialtiesToResultScreen"
                style="@style/textTitle" />
            <View
                style="@style/Divider" />
            <Button
                android:id="@+id/workToResult"
                android:text="@string/workWithSpecialtiesToResultScreenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>