<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="15dp">
    <LinearLayout
        android:id="@+id/chanceLinearLayout"
        style="@style/mainLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/chanceSpecialtyName"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/chanceSpecialtyNameText"
                android:text="@string/selectedSpecialtyName"
                style="@style/textDescription" />
            <TextView
                android:id="@+id/chanceSpecialtyNameValue"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/chanceFacultyName"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/chanceFacultyNameText"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/selectedFacultyName"
                style="@style/textDescription" />
            <TextView
                android:id="@+id/chanceFacultyNameValue"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
        <View
            android:id="@+id/chanceFirstDivider"
            style="@style/Divider"
            android:layout_weight="1" />
        <LinearLayout
            android:id="@+id/chanceMinimalScore"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/chanceMinimalScoreText"
                android:text="@string/chanceMinimalScore"
                style="@style/textDescription" />
            <TextView
                android:id="@+id/chanceMinimalScoreValue"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/chanceChance"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/chanceChanceText"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/chanceChanceOfGraduation"
                style="@style/textDescription" />
            <TextView
                android:id="@+id/chanceChanceValue"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
        <View
            android:id="@+id/chanceSecondDivider"
            style="@style/Divider"
            android:layout_weight="1" />
        <LinearLayout
            android:id="@+id/chanceTotalOfEntries"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/chanceTotalOfEntriesText"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/totalOfEntries"
                style="@style/textDescription" />
            <TextView
                android:id="@+id/chanceTotalOfEntriesValue"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/chanceAmountOfStudents"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/chanceAmountOfStudentsText"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/selectedAmountOfStudents"
                style="@style/textDescription" />
            <TextView
                android:id="@+id/chanceAmountOfStudentsValue"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/chancePosition"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/chancePositionText"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/chanceSupposedPosition"
                style="@style/textDescription" />
            <TextView
                android:id="@+id/chancePositionValue"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>