<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/selectedSpecialtyName"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/selectedSpecialtyNameText"
            android:text="@string/selectedSpecialtyName"
            style="@style/profileTextDescription" />
        <EditText
            android:id="@+id/selectedSpecialtyNameValue"
            android:enabled="false"
            android:textColor="@color/BLACK"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/selectedAmountOfStudents"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedSpecialtyName">
        <TextView
            android:id="@+id/selectedAmountOfStudentsText"
            android:text="@string/selectedAmountOfStudents"
            style="@style/profileTextDescription" />
        <EditText
            android:id="@+id/selectedAmountOfStudentsValue"
            android:enabled="false"
            android:textColor="@color/BLACK"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/selectedPosition"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedAmountOfStudents">
        <TextView
            android:id="@+id/selectedPositionText"
            android:text="@string/selectedPosition"
            style="@style/profileTextDescription" />
        <EditText
            android:id="@+id/selectedPositionValue"
            android:enabled="false"
            android:textColor="@color/BLACK"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/selectedOldMinimalScore"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedPosition">
        <TextView
            android:id="@+id/selectedOldMinimalScoreText"
            android:text="@string/selectedOldMinimalScore"
            style="@style/profileTextDescription" />
        <EditText
            android:id="@+id/selectedOldMinimalScoreValue"
            android:enabled="false"
            android:textColor="@color/BLACK"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/selectedNewMinimalScore"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedOldMinimalScore">
        <TextView
            android:id="@+id/selectedNewMinimalScoreText"
            android:text="@string/selectedNewMinimalScore"
            style="@style/profileTextDescription" />
        <EditText
            android:id="@+id/selectedNewMinimalScoreValue"
            android:enabled="false"
            android:textColor="@color/BLACK"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>